Fixed various lint and test errors/warnings